(library
 (name tf_aws)
 (public_name tf_aws)
 (modes native)
 (modules
  :standard
  \
  ; excluding aws_wafv2_* and aws_quicksight_* as some of modules among
  ; them are too big to be compiled with ocamlopt
  aws_wafv2_ip_set
  aws_wafv2_regex_pattern_set
  aws_wafv2_rule_group
  aws_wafv2_web_acl
  aws_wafv2_web_acl_association
  aws_wafv2_web_acl_logging_configuration
  aws_quicksight_account_subscription
  aws_quicksight_analysis
  aws_quicksight_dashboard
  aws_quicksight_data_set
  aws_quicksight_data_source
  aws_quicksight_folder
  aws_quicksight_folder_membership
  aws_quicksight_group
  aws_quicksight_group_membership
  aws_quicksight_iam_policy_assignment
  aws_quicksight_ingestion
  aws_quicksight_namespace
  aws_quicksight_refresh_schedule
  aws_quicksight_template
  aws_quicksight_template_alias
  aws_quicksight_theme
  aws_quicksight_user
  aws_quicksight_vpc_connection
  ; TODO: empty inputs, investigate
  aws_ram_sharing_with_organization
  aws_macie2_account)
 (flags
  :standard
  -open
  ContainersLabels
  -open
  Ppx_yojson_conv_lib.Yojson_conv.Primitives)
 (lint
  (pps ppx_yojson_conv))
 (libraries tf yojson ppx_yojson_conv_lib))
